MDEV-38817 `innodb.skip_locked_nowait` fails: `SELECT NOWAIT` gets `ER_LOCK_WAIT_TIMEOUT`

Don't send OK packet early for locking reads (`SELECT ... FOR UPDATE`,
`SELECT ... LOCK IN SHARE MODE`).

MDEV-38019 added an optimization in `select_send::send_eof()` that sends
the OK packet to the client before the server finishes cleanup, allowing
the client to process results sooner. The guard
`!thd->transaction->stmt.is_trx_read_write()` was intended to exclude
write transactions, but `mark_trx_read_write()` is only called for DML
(INSERT/UPDATE/DELETE), not for locking reads. This caused
`SELECT ... FOR UPDATE` with autocommit to send OK before
`external_lock(F_UNLCK)` committed and released locks, creating a race
where another connection using `NOWAIT` could see still-held locks and
immediately fail with `ER_LOCK_WAIT_TIMEOUT`.

Add a check for `select_lock == st_select_lex::NONE` to ensure the early
OK path is only taken for truly non-locking SELECT statements.